# ez-stack

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  reference.md
.github/workflows/: python-wheel.yml  release.yml
python/: MANIFEST.in  pyproject.toml  setup.py
python/ez_stack/: __init__.py
src/: cli.rs  error.rs  git.rs  github.rs  main.rs  stack.rs  ui.rs
src/cmd/: adopt.rs  amend.rs  branch.rs  checkout.rs  commit.rs  config.rs  create.rs  delete.rs  diff.rs  draft.rs  init.rs  list.rs  log.rs  merge.rs  mod.rs  move_branch.rs  mutation_guard.rs  navigate.rs  parent.rs  pr_link.rs  pr_view.rs  push.rs  restack.rs  shell_init.rs  skill.rs  status.rs  submit.rs  sync.rs  worktree.rs
