[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-stack"
dynamic = ["version"]
description = "Stacked PRs for GitHub — agent-first CLI for parallel development"
readme = "../README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["git", "github", "stacked-prs", "cli", "developer-tools", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/rohoswagger/ez-stack"
Repository = "https://github.com/rohoswagger/ez-stack"

[project.scripts]
ez = "ez_stack:main"

[tool.setuptools]
packages = ["ez_stack"]

[tool.setuptools.dynamic]
version = {attr = "ez_stack.__version__"}
